--- a/scss/layouts/responsiveness.scss
+++ b/scss/layouts/responsiveness.scss
@@ -73,6 +73,9 @@
             }
         }
     }
+    #notice td {
+        width: 1px;
+    }
     #main {
         display: block;
         padding: 0 0 40px;
